# raft-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: simple_run.rs  simulate_add_node.rs  simulate_node_failure.rs  simulate_replica_repair.rs
src/: cluster.rs  error.rs  lib.rs  log.rs  main.rs  mod.rs  network.rs  server.rs  state_mechine.rs  storage.rs
