[package]
name = "raft_rs"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[[example]]
name = "simple_run"
path = "examples/simple_run.rs"