[package]
name = "raft_rs"
version = "0.0.1"
edition = "2021"
authors = ["Vipul Vaibhaw <vaibhaw.vipul@example.com>"]
description = "A Raft implementation by SpacewalkHq"
license = "MIT"
readme = "README.md"
repository = "https://github.com/spacewalkhq/raft-rs"
homepage = "https://github.com/spacewalkhq/raft-rs"
keywords = ["raft", "distributed-systems", "consensus"]
categories = ["algorithms", "network-programming", "distributed-systems"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10.8"

[[example]]
name = "simple_run"
path = "examples/simple_run.rs"